correct ratio paper

--- a/content/publication/dyer-2022-ratio/cite.bib
+++ b/content/publication/dyer-2022-ratio/cite.bib
@@ -2,6 +2,6 @@
   url = {https://arxiv.org/abs/2202.11585},
   author = {Dyer, Joel and Cannon, Patrick and Schmon, Sebastian M},
   title = {Amortised Likelihood-free Inference for Expensive Time-series Simulators with Signatured Ratio Estimation},
-  publisher = {nternational Conference on Artificial Intelligence and Statistics (AISTATS)},
+  publisher = {International Conference on Artificial Intelligence and Statistics (AISTATS)},
   year = {2022}
 }
